Backend/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-auth-deployment
  labels:
    app: django-auth
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django-auth
  template:
    metadata:
      labels:
        app: django-auth
    spec:
      containers:
      - name: django-auth
        image: ahmedmokhtar24/authentication_service:latest
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: sqlite-storage
          mountPath: /db.sqlite3
      volumes:
      - name: sqlite-storage
        persistentVolumeClaim:
          claimName: sqlite-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: django-auth-service
spec:
  selector:
    app: django-auth
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
