Backend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-auth-service
  labels:
    app: django-auth
spec:
  selector:
    app: django-auth
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
