Backend/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: advising-system-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /api/students
        pathType: Prefix
        backend:
          service:
            name: student-service
            port:
              number: 80
      - path: /api/advisors
        pathType: Prefix
        backend:
          service:
            name: advisor-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
